src/test/compile-fail/bad-name.rs
// error-pattern: expecting

fn main() {
  let x.y::<int>.z foo;
}
